--- a/local.yml
+++ b/local.yml
@@ -27,10 +27,15 @@
         - ffmpeg
         - apt-transport-https
         - kubectl
-  - name: Install VS Code
-    snap:
-      name: code
-      classic: true
+  - name: add vs code repository
+    apt_repository:
+      repo: "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main"
+      state: present
+      update_cache: true
+  - name: install vs code
+    package:
+      name:
+        - code
   - name: Download MS product repository
     get_url:
       url: 'https://packages.microsoft.com/config/ubuntu/{{ ansible_distribution_version }}/packages-microsoft-prod.deb'
