--- a/local.yml
+++ b/local.yml
@@ -28,6 +28,7 @@
         - apt-transport-https
         - kubectl
         - tmux
+        - python3-pip
   - name: add vs code repository
     apt_repository:
       repo: "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main"
